force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Realtime_Project_Creation__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Realtime_Project_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The project creation process will happen in realtime with this setting enabled. If this setting is disabled the project creation will happen in the background and may take a few seconds before the project is created.</inlineHelpText>
    <label>Realtime Project Creation</label>
    <type>Checkbox</type>
</CustomField>