force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Report_Id_My_Blocked_Tasks__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Report_Id_My_Blocked_Tasks__c</fullName>
    <label>Report Id: My Blocked Tasks</label>
    <length>15</length>
    <type>Text</type>
</CustomField>