force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Report_Id_My_tasks_by_project__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Report_Id_My_tasks_by_project__c</fullName>
    <inlineHelpText>Report to use for showing my tasks by project.  pv0 = project id (15 char) and pv1 = Assign to name.</inlineHelpText>
    <label>Report Id: My tasks by project</label>
    <length>15</length>
    <type>Text</type>
</CustomField>