force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Report_Id_Project_Milestone_Open_Task__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Report_Id_Project_Milestone_Open_Task__c</fullName>
    <label>Report Id: Project, Milestone, Open Task</label>
    <length>15</length>
    <type>Text</type>
</CustomField>