force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Report_Id_Project_Report__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Report_Id_Project_Report__c</fullName>
    <description>ID of the report used for the &apos;Project Report&apos; button.</description>
    <inlineHelpText>Please input the ID of the report that will be directed to when clicking the &apos;Project Report&apos; button on the project page.</inlineHelpText>
    <label>Report Id: Project Report</label>
    <length>20</length>
    <type>Text</type>
</CustomField>