force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Report_Id_Task_Status_By_Project__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Report_Id_Task_Status_By_Project__c</fullName>
    <label>Report Id: Task Status By Project</label>
    <length>15</length>
    <type>Text</type>
</CustomField>