force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Shift_Deadline_When_Kickoff_Set__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Shift_Deadline_When_Kickoff_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the kickoff of a Milestone or Project is changed and the deadline is not changed, this setting causes the deadline of that Milestone/Project to shift by the same number of days as the Kickoff.</description>
    <inlineHelpText>When the kickoff of a Milestone or Project is changed and the deadline is not changed, this setting causes the deadline of that Milestone/Project to shift by the same number of days as the Kickoff.</inlineHelpText>
    <label>Shift Proj/MS Deadline When Kickoff Set</label>
    <type>Checkbox</type>
</CustomField>