force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Shift_Due_Date_When_Start_Date_Set__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Shift_Due_Date_When_Start_Date_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the start date of a task is changed and the due date is not changed, this setting causes the due date of that task to shift by the same number of days as the start date.</description>
    <inlineHelpText>When the start date of a task is changed and the due date is not changed, this setting causes the due date of that task to shift by the same number of days as the start date.</inlineHelpText>
    <label>Shift Task Due Date When Start Date Set</label>
    <type>Checkbox</type>
</CustomField>