force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Show_Actuals_on_Gantt_Chart__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Show_Actuals_on_Gantt_Chart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show the actual start date and actual finish date on the gantt chart</description>
    <inlineHelpText>Show the actual start date and actual finish date on the gantt chart</inlineHelpText>
    <label>Show Actuals on Gantt Chart</label>
    <type>Checkbox</type>
</CustomField>