force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Show_Assigned_To_on_Gantt_Chart__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Show_Assigned_To_on_Gantt_Chart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows the assigned to value on the gantt chart</description>
    <inlineHelpText>Shows the assigned to value on the gantt chart (Premium Edition Only)</inlineHelpText>
    <label>zDeprecated</label>
    <type>Checkbox</type>
</CustomField>