force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Show_Duration_on_Gantt_Chart__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Show_Duration_on_Gantt_Chart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show the duration of the task on the gantt chart</description>
    <inlineHelpText>Show the duration of the task on the gantt chart</inlineHelpText>
    <label>Show Duration on Gantt Chart</label>
    <type>Checkbox</type>
</CustomField>