force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Show_Percentage_Column_on_Gantt_Chart__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Show_Percentage_Column_on_Gantt_Chart__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Show the Percentage of the task on the gantt chart as a column(Premium Edition Only)</inlineHelpText>
    <label>Show Percentage Column on Gantt Chart</label>
    <type>Checkbox</type>
</CustomField>