force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Show_Resource_on_Gantt_Chart__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Show_Resource_on_Gantt_Chart__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Show the resource of the task on the gantt chart (Premium Edition Only)</inlineHelpText>
    <label>Show Resource on Gantt Chart</label>
    <type>Checkbox</type>
</CustomField>