force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Summary_Programs__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Summary_Programs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Summary tab will display Programs instead of Projects when this setting is checked.</description>
    <inlineHelpText>The Summary tab will display Programs instead of Projects when this setting is checked.</inlineHelpText>
    <label>Summary Programs</label>
    <type>Checkbox</type>
</CustomField>