force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Sync_on_Predecessor_Task_Completion__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Sync_on_Predecessor_Task_Completion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this setting is enabled successor project tasks will only be synced to Salesforce tasks/events when its predecessor project task is marked complete. (Premium Edition Only)</inlineHelpText>
    <label>Sync on Predecessor Task Completion</label>
    <type>Checkbox</type>
</CustomField>