force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Sync_Task_With_Actual_Start_Finish_Dates__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Sync_Task_With_Actual_Start_Finish_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Syncs Start Date and Due Date with the values of Actual Start Date and Actual Finish Date</inlineHelpText>
    <label>Sync Task With Actual Start Finish Dates</label>
    <type>Checkbox</type>
</CustomField>