force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Sync_Tasks_Events_When_in_Proj_Planning__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Sync_Tasks_Events_When_in_Proj_Planning__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When unchecked: Projects with a status of ???Planning??? will not sync Tasks to SFDC Tasks/Events. But when the Project status is changed to ???Active??? all of the Tasks will then be synced to SFDC Tasks/Events (Premium Edition Only)</inlineHelpText>
    <label>Sync Tasks Events When in Proj Planning</label>
    <type>Checkbox</type>
</CustomField>