force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Usage_of_Limits__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Usage_of_Limits__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Determines how much of the limit to use. If 100 is entered then MPM+ will use all of the governor limit potential while running synchronously. Set this field to less than 100 to allow a buffer so the limit avoids being hit and the code can then continue to run asynchronously.</description>
    <inlineHelpText>Percentage of usage of limits to use. For example if you set it to 100 it will use up to 100 queries in an execution context because that is 100% of the limit.</inlineHelpText>
    <label>Usage of Limits</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>