force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Workdays_Exclude_Holidays__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Workdays_Exclude_Holidays__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked the workday duration field calculation will exclude holidays from the duration.</inlineHelpText>
    <label>Exclude Holidays From Workday Duration</label>
    <type>Checkbox</type>
</CustomField>